<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorapp"
    android:foregroundTint="@color/colorapp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titulo"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/basetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/formatexto"
            android:ems="10"
            android:hint="@string/baset"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/alttext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/formatexto1"
            android:ems="10"
            android:hint="@string/altt"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="12sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rectradio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorapp"
                android:checked="true"
                android:text="@string/rect" />

            <RadioButton
                android:id="@+id/triangradio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorapp"
                android:text="@string/triagt" />
        </RadioGroup>

        <TextView
            android:id="@+id/resultext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/formatexto2"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/formaboton"
            android:onClick="calcular"
            android:text="@string/botont"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/formaboton"
            android:onClick="limpiar"
            android:text="@string/botonl"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>